# daq122-ui

./: .gitignore  build-win.bat  build.sh  cli.py  cli2.py  objects.txt  read.txt  release.bat  release.sh  requirements.txt  simple_monitor.py
api/: __init__.py  dag122.py  (+7 more)
lib/: CMakeLists.txt  base_backend.h  base_backend_option.h  base_device.h  base_device_config.h  base_device_option.h  build.bat  build.sh  daq122.cpp  daq122.h  daq122_bindings.cpp  daq122_c_interface.cpp  daq122_c_interface.h  log_config.h
lib/backend/: base_backend.h  base_backend_option.h
lib/backend/serial/: serial_backend.h
lib/backend/tcp_client/: tcp_client_backend.h
lib/backend/udp/: udp_backend.h
lib/backend/usb/: usb_backend.h
lib/cmake/: daq.cmake
lib/include/: daq122_c_interface.h
lib/lib/: README.md
lib/lib/Linux/libdaq/include/libdaq/backend/: base_backend.h
lib/lib/Linux/libdaq/include/libdaq/command/: base_command.h
lib/lib/Linux/libdaq/include/libdaq/device/: base_device.h  base_device_config.h
lib/lib/Linux/libdaq/include/libdaq/module/: td_100.h
lib/lib/Windows/libdaq/include/libdaq/backend/: base_backend.h  base_backend_option.h
lib/lib/Windows/libdaq/include/libdaq/device/: base_device.h  base_device_option.h
lib/lib/Windows/libdaq/include/libdaq/module/: td_100.h
lib/lib/Windows/libdaq/include/libdaq/packet/: base_packet.h
lib/libdaq/backend/: base_backend.h  base_backend_option.h
lib/libdaq/backend/modebus_rtu/: modbus_rtu_backend.h
lib/libdaq/backend/serial/: serial_backend.h
lib/libdaq/backend/tcp_client/: tcp_client_backend.h
lib/libdaq/backend/udp/: udp_backend.h
lib/libdaq/backend/usb/: usb_backend.h
lib/libdaq/device/: base_device.h  base_device_option.h
lib/libdaq/device/DAQ112M/: daq_112_m.h
lib/libdaq/device/DAQ122/: daq122.h
lib/libdaq/device/DAQ132M/: daq_132_m.h
lib/libdaq/device/DAQ216/: daq216.h
lib/libdaq/device/DAQ217/: daq217.h
lib/libdaq/device/DAQ329/: daq329.h
lib/src/: daq122_c_interface.cpp
(+29 files in other folders)
